--- a/P01AplikacjaZawodnicy/P01AplikacjaZawodnicy.csproj
+++ b/P01AplikacjaZawodnicy/P01AplikacjaZawodnicy.csproj
@@ -66,6 +66,9 @@
     <EmbeddedResource Include="FrmStartowy.resx">
       <DependentUpon>FrmStartowy.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmSzczegoly.resx">
+      <DependentUpon>FrmSzczegoly.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
